<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-apps-mfiplayer</artifactId>
  <version>1.0.6</version>

  <name>Vavi MFi Player Application</name>
  <organization>
    <name>vavi</name>
  </organization>
  <url>http://www.vavisoft.com/</url>
  <description/>

  <profiles>
    <profile>
      <!-- mvn -P run antrun:run -Dxxx='xxx' -->
      <id>run</id>
      <build>
        <plugins>
          <plugin>
            <!-- GOOD: fork: OK, test jars: OK, user args, default args: OK -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.1.0</version>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <java classname="vavi.apps.mfiPlayer.MfiPlayer" fork="true">
                  <classpath>
                    <path refid="maven.compile.classpath"/>
                    <path refid="maven.test.classpath"/>
                  </classpath>
                  <jvmarg value="-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties" />
                  <jvmarg value="-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf" />
                  <jvmarg value="-Dapple.laf.useScreenMenuBar=true" />
                  <jvmarg value="-Dapple.awt.application.name=MFiPlayer" />
                </java>
              </target>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <source>25</source> <!-- TODO release causes compilation failure why? -->
          <target>25</target>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>java.desktop/com.sun.media.sound=ALL-UNNAMED</arg>
            <arg>--add-exports</arg>
            <arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
          </compilerArgs>
          <!-- https://stackoverflow.com/a/30472473 -->
          <fork>true</fork>
          <showWarnings>true</showWarnings>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>generate-test-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>com.github.umjammer.vavi-commons</groupId>
                  <artifactId>vavi-instrumentation</artifactId>
                  <type>jar</type>
                  <overWrite>false</overWrite>
                  <outputDirectory>${project.build.directory}</outputDirectory>
                  <destFileName>vavi-instrumentation.jar</destFileName>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <argLine>
            --add-exports java.desktop/com.sun.media.sound=ALL-UNNAMED
            --add-opens java.base/java.io=ALL-UNNAMED
            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
            -Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>gitlab-maven-packages</id> <!-- vavi-sound-nda -->
      <url>https://gitlab.com/api/v4/projects/30804899/packages/maven</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>6.1.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.22</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.vavi-commons</groupId>
      <artifactId>vavi-instrumentation</artifactId>
      <version>1.1.22</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-util-serdes</artifactId>
      <version>1.0.15</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound</artifactId>
      <version>1.0.32</version>
<exclusions>
  <exclusion>
    <groupId>vavi</groupId>
    <artifactId>vavi-sound-nda</artifactId>
  </exclusion>
</exclusions>
    </dependency>
<dependency>
  <groupId>vavi</groupId>
  <artifactId>vavi-sound-nda</artifactId>
  <version>1.0.19</version>
</dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-sandbox</artifactId>
      <version>1.0.18</version>
<exclusions>
  <exclusion>
    <groupId>com.github.lostromb</groupId>
    <artifactId>concentus</artifactId>
  </exclusion>
</exclusions>
    </dependency>
<dependency>
  <groupId>com.github.lostromb</groupId>
  <artifactId>concentus</artifactId>
  <version>6c2328d</version>
</dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-awt</artifactId>
      <version>1.0.10</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-ma</artifactId>
      <version>0.0.3</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-sound-mdsound</artifactId>
      <version>0.0.27</version>
      <exclusions>
        <exclusion>
          <groupId>com.github.umjammer</groupId>
          <artifactId>vavi-sound</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

<!--
    <dependency>
      <groupId>com.github.GrenderG</groupId> <!- - dev.opendoja / - ->
      <artifactId>openDoJa</artifactId> <!- - opendoja / - ->
      <version>v0.2.5</version>
    </dependency>
-->

    <dependency>
      <groupId>com.github.umjammer.vavi-apps-dosbox</groupId> <!-- com.acclash.jdosbox / com.github.umjammer.vavi-apps-dosbox -->
      <artifactId>jdosbox</artifactId>
      <version>0.74.36v</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer.vavi-apps-dosbox</groupId> <!-- com.acclash.jdosbox / com.github.umjammer.vavi-apps-dosbox -->
      <artifactId>jdosbox-win</artifactId>
      <version>0.74.36v</version>
    </dependency>

    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.5</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
